--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   path_provider: ^2.0.11
   google_maps_flutter: ^2.2.1
   flutter_polyline_points: ^1.0.0
+  url_launcher: ^6.1.7
+  permission_handler: ^10.2.0
+  location: ^4.4.0
+  android_alarm_manager_plus: ^2.1.0
 
 
 equatable: ^1.2.5  
