--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,11 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31
+
+    lintOptions { 
+    checkReleaseBuilds false
+}
+    compileSdkVersion 32
     ndkVersion flutter.ndkVersion
 
     compileOptions {
