--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^10.2.0
   location: ^4.4.0
   android_alarm_manager_plus: ^2.1.0
+  
+  awesome_notifications: ^0.7.4+1
 
 
 equatable: ^1.2.5  
