--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   android_alarm_manager_plus: ^2.1.0
   
   awesome_notifications: ^0.7.4+1
+  geolocator: ^9.0.2
+  http: ^0.13.5
+  beautiful_soup_dart: ^0.3.0
+  dio: ^4.0.6
 
 
 equatable: ^1.2.5  
