--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
      <uses-permission android:name="android.permission.CAMERA" />
        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
    <application
+   android:usesCleartextTraffic="true"
         android:label="flutter_vet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
