--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ dependencies:
   http: ^0.13.5
   beautiful_soup_dart: ^0.3.0
   dio: ^4.0.6
+  google_translator: ^1.0.0
+  translator: ^0.1.7
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  google_sign_in: ^5.4.4
+  shared_preferences: ^2.0.17
+  carousel_slider: ^4.2.1
 
 
 equatable: ^1.2.5  
